--- a/regist.html
+++ b/regist.html
@@ -17,14 +17,8 @@
      <main>
     
         <div class="container setWidth">
-            <form action="/register" class="text-center form-horisontal">
+            <form id="signup" action="/register" class="text-center form-horisontal">
                 <h3>Sign up</h3>
-               <div class="form-group">
-                 <label for="username"  class="control-label col-sm-3"><h3>Username :</h3> </label>
-                 <div class="col-sm-8">
-                 <input   class="form-control" type="text" id="username" name="username">
-                 </div>
-                 </div>
                  <div class="form-group">
                     <label for="email"  class="control-label col-sm-3"><h3>Email :</h3> </label>
                     <div class="col-sm-8">
